[package]
name = "bareretro"
version = "0.1.0"
authors = ["Chris Rogus <rogusdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.3"
actix-rt = "2.1.0"
actix-web = "4.0.0-beta.3"
tokio-postgres = "0.7"
deadpool-postgres = "0.7"
async-trait = "0.1.47"
dyn-clonable = "0.9.0"
maplit = "1.0.2"
const_format = "0.2.13"
